objects/Policy_Plan__c/Policy_Plan__c.object-meta.xml
<CustomObject>
    <label>Policy Plan</label>
    <nameField>
        <label>Policy Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>