objects/Policy_Plan__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <label>Plan Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>