objects/Policy_Plan__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <label>Plan Name</label>
    <type>TextArea</type>
</CustomField>