objects/Policy_Plan__c/fields/Plan_Revision__c.field-meta.xml
<CustomField>
    <fullName>Plan_Revision__c</fullName>
    <label>Plan Revision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>