objects/Policy_Plan__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Policy Plans</relationshipLabel>
    <relationshipName>Policy_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>